--- a/corano/assets/css/draggable-grid.css
+++ b/corano/assets/css/draggable-grid.css
@@ -341,6 +341,8 @@
 
     .vase-details-panel.active {
         right: 5%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
     }
 }
 
