--- a/corano/components/navigation.html
+++ b/corano/components/navigation.html
@@ -7,7 +7,7 @@
             <div class="col-lg-2">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="assets/img/jevoo-logo.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
+                        <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
                     </a>
                 </div>
             </div>
@@ -22,6 +22,9 @@
                             <ul>
                                 <li class="{{home_active}}"><a href="index.html">Home</a></li>
                                 <li class="{{about_active}}"><a href="about-us.html">About Us</a></li>
+                                <li class="{{our_promises_active}}"><a href="our-promises.html">Our Promises</a></li>
+                                <li class="{{our_services_active}}"><a href="our-services.html">Our Services</a></li>
+                                <li class="{{our_philosophy_active}}"><a href="our-philosophy.html">Our Philosophy</a></li>
                             </ul>
                         </nav>
                         <!-- main menu navbar end -->
@@ -70,8 +73,73 @@
             </div>
             <!-- header right area end -->
 
+            <!-- mobile menu area start -->
+            <div class="col-12 d-block d-lg-none">
+                <div class="mobile-menu-area">
+                    <div class="mobile-logo">
+                        <a href="index.html">
+                            <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
+                        </a>
+                    </div>
+                    <div class="mobile-menu-toggler">
+                        <button class="mobile-menu-toggle">
+                            <i class="pe-7s-menu"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <!-- mobile menu area end -->
+
         </div>
     </div>
 </div>
 
-<!-- Mobile navigation handled separately in the main HTML files -->
+<!-- off-canvas menu start -->
+<aside class="off-canvas-wrapper">
+    <div class="off-canvas-overlay"></div>
+    <div class="off-canvas-inner-content">
+        <div class="btn-close-off-canvas">
+            <i class="pe-7s-close"></i>
+        </div>
+
+        <div class="off-canvas-inner">
+            <!-- mobile menu start -->
+            <div class="mobile-navigation">
+                <!-- mobile menu navigation start -->
+                <nav>
+                    <ul class="mobile-menu">
+                        <li class="{{home_active}}"><a href="index.html">Home</a></li>
+                        <li class="{{about_active}}"><a href="about-us.html">About Us</a></li>
+                        <li class="{{our_promises_active}}"><a href="our-promises.html">Our Promises</a></li>
+                        <li class="{{our_services_active}}"><a href="our-services.html">Our Services</a></li>
+                        <li class="{{our_philosophy_active}}"><a href="our-philosophy.html">Our Philosophy</a></li>
+                    </ul>
+                </nav>
+                <!-- mobile menu navigation end -->
+            </div>
+            <!-- mobile menu end -->
+
+            <!-- mobile menu bottom start -->
+            <div class="mobile-menu-bottom">
+                <!-- mobile settings start -->
+                <div class="mobile-settings">
+                    <div class="mobile-settings-item">
+                        <div class="mobile-settings-title">
+                            <h6>My Account</h6>
+                        </div>
+                        <div class="mobile-settings-content">
+                            <ul>
+                                <li><a href="my-account.html">My Account</a></li>
+                                <li><a href="login-register.html">Login / Register</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- mobile settings end -->
+            </div>
+            <!-- mobile menu bottom end -->
+
+        </div>
+    </div>
+</aside>
+<!-- off-canvas menu end -->
