--- a/corano/assets/css/draggable-grid.css
+++ b/corano/assets/css/draggable-grid.css
@@ -37,6 +37,11 @@
     margin-bottom: 5vw;
 }
 
+.product-placeholder {
+    pointer-events: none;
+    margin-bottom: 5vw;
+}
+
 .vase-details-thumb .marquee-item {
     margin-bottom: 0;
 }
