--- a/corano-dark/assets/css/style.css
+++ b/corano-dark/assets/css/style.css
@@ -2231,6 +2231,11 @@ textarea:focus {
   font-size: 60px;
   font-weight: normal;
   line-height: 1;
+  text-shadow: -1px -1px 0 #000,
+               1px -1px 0 #000,
+              -1px  1px 0 #000,
+               1px  1px 0 #000;
+  -webkit-text-stroke: 1px black;
 }
 .hero-slider-content .slide-title span {
   display: block;
@@ -2258,9 +2263,9 @@ textarea:focus {
 }
 .hero-slider-content .slide-desc {
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 700;
   line-height: 1.3;
-  color: #fff;
+  color: #000;
   padding-top: 20px;
 }
 @media only screen and (max-width: 575.98px) {
